Grid loading scrollbar hiding (change detection fix) (#5605)

--- a/client/one/app/shared/components/smart-grid/smart-grid.component.less
+++ b/client/one/app/shared/components/smart-grid/smart-grid.component.less
@@ -200,3 +200,11 @@ body.ag-unselectable * {
     flex: 0 0 60px;
     margin-right: 5px;
 }
+
+//
+// horizontal scroll hiding
+//
+
+.zem-smart-grid__table--no-horizontal-scroll .ag-body-horizontal-scroll {
+    display: none;
+}
